# contextual-redactor

./: ner_experiments.py  pyproject.toml
experiments_pdf_reflow/: doc_struct_analytics.py  experiment_pdf_reflow_fitz.py  experiment_pdf_reflow_fitz_v2.py  experiment_pdf_reflow_fitz_v3.py  experiment_pdf_reflow_raster_based.py  experiment_pdf_reflow_raster_based_v2.py  experiment_pdf_reflow_raster_based_v3.py  experiment_pdf_reflow_weasyprint.py  test_html.html
logs/: ner_log_20260112_121512.csv  ner_log_20260112_121624.csv  ner_log_20260112_161119.csv  ner_log_20260112_161443.csv  ner_log_20260115_123908.csv  ner_log_20260115_125546.csv  ner_log_20260115_131904.csv  ner_log_20260115_134607.csv  ner_log_20260115_154857.csv  ner_log_20260121_122339.csv  ner_log_20260121_122714.csv  ner_log_20260121_123110.csv  ner_log_20260121_130039.csv  ner_log_20260123_104630.csv  ner_log_20260123_111246.csv  ner_log_20260123_111410.csv
src/redactor/: app.py  azure_client.py  email_duplicate_finder.py  fastapi_app.py  find_duplicates.py  pdf_edit_client.py  redaction_logic.py  utils.py
tests/: test_detect_duplicate_emails.py  test_detect_duplicates.py  test_extract_emails.py
